--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -21,9 +21,27 @@
 	&.container {
 		footer {
 			display: flex;
+			flex-direction: column;
 			justify-content: space-evenly;
 			margin-top: 50px;
 			color: white;
+
+			.photo-copyright {
+				display: flex;
+				justify-content: space-evenly;
+			}
+
+			.footer-bottom {
+				display: flex;
+				justify-content: center;
+				text-align: center;
+				align-items: center;
+				margin-bottom: 10px;
+
+				h2 {
+					font-size: 1rem;
+				}
+			}
 		}
 	}
 }
