gets photo search working

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,7 +15,14 @@
 .header-content {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	padding: 5px 20px;
+	margin-bottom: 50px;
+
+	h2 {
+		font-size: 2.5rem;
+		padding-bottom: 5px;
+	}
 }
 
 .high-def {
@@ -76,4 +83,36 @@
 			}
 		}
 	}
+}
+
+// Date Picker
+#root
+	> div
+	> div.App
+	> header
+	> div
+	> div.search-field
+	> div
+	> form
+	> div
+	> label {
+	font-size: 1.1rem;
+}
+
+#root
+	> div
+	> div.App
+	> header
+	> div
+	> div.search-field
+	> div
+	> form
+	> div
+	> div
+	> div
+	> div
+	> input {
+	cursor: pointer;
+	width: 100px;
+	text-align: center;
 }
