--- a/src/styles.css
+++ b/src/styles.css
@@ -489,4 +489,10 @@ template {
   justify-content: space-around;
 }
 
+#root > div > div.App > section > div > div.ui.container.picture-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 /*# sourceMappingURL=styles.css.map */
