media query for footer

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -145,4 +145,14 @@
 			margin-bottom: 20px;
 		}
 	}
+
+	.footer-top {
+		.photo-copyright {
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			text-align: center;
+			margin-bottom: 20px;
+		}
+	}
 }
