--- a/src/styles.css
+++ b/src/styles.css
@@ -506,6 +506,14 @@ template {
   .header-content .search-field {
     margin-bottom: 20px;
   }
+
+  .footer-top .photo-copyright {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 20px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
