--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,13 @@
+// @font-face {
+// 	font-family: 'Billiondreams_Personal';
+// 	src: local('Billiondreams_Personal'),
+// 		url('../fonts/BILLIONDREAMS_PERSONAL.TTF');
+// 	font-weight: normal;
+// }
+
+// // Fonts
+// // $logo-font: 'BILLIONDREAMS_PERSONAL', sans-serif;
+
 // Background Animation
 $background-animation-time: 50s;
 $background-image: './images/stars.png';
