--- a/src/styles.css
+++ b/src/styles.css
@@ -481,9 +481,21 @@ template {
   padding: 5px 20px;
   margin-bottom: 50px;
 }
+.header-content .header-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header-content .header-logo .spacetagram {
+  justify-content: center;
+}
 .header-content h2 {
   font-size: 2.5rem;
-  padding-bottom: 5px;
+  margin-left: 20px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #f72700;
 }
 
 .high-def form .field {
@@ -554,8 +566,11 @@ template {
   align-items: center;
 }
 
-@media (max-width: 650px) {
+@media (max-width: 750px) {
   .header-content {
+    flex-direction: column;
+  }
+  .header-content .header-logo {
     flex-direction: column;
   }
   .header-content h2 {
