--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,3 +12,6 @@ $logo-font: 'Billion-Dreams', sans-serif;
 $background-animation-time: 50s;
 $background-image: './images/stars.png';
 $background-twinkle: './images/twinkling.png';
+
+// Colors
+$logo-color: #f72700;
