--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -37,7 +37,7 @@
 				justify-content: center;
 				align-items: center;
 				text-align: center;
-				color: #f72700;
+				color: $logo-color;
 			}
 		}
 	}
@@ -47,16 +47,16 @@
 	form {
 		.field {
 			padding: 5px;
-			label {
-				color: white;
+			// label {
+			// 	color: white;
 
-				&::before {
-					color: white;
-				}
-				&::after {
-					color: white;
-				}
-			}
+			// 	&::before {
+			// 		color: white;
+			// 	}
+			// 	&::after {
+			// 		color: white;
+			// 	}
+			// }
 		}
 	}
 }
@@ -82,7 +82,7 @@
 			flex-direction: column;
 			justify-content: space-evenly;
 			margin-top: 50px;
-			color: white;
+			color: $logo-color;
 
 			.photo-copyright {
 				display: flex;
