moves search to far right

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -43,6 +43,14 @@
 	}
 }
 
+.search-field {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
 .high-def {
 	form {
 		.field {
