adjusts modal size

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -148,9 +148,47 @@
 	text-align: center;
 }
 
-.social-shares-modal {
+#modal {
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
+	align-items: center;
+	width: 300px;
+
+	.content {
+		display: flex;
+		flex-wrap: wrap;
+		max-width: 100%;
+
+		.description {
+			max-width: 100%;
+			.social-shares-modal {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				text-align: center;
+				flex-wrap: wrap;
+				max-width: 100%;
+
+				.m5 {
+					margin: 0 5px;
+				}
+			}
+		}
+	}
+}
+
+body
+	> div.ui.page.modals.dimmer.transition.visible.active
+	> div
+	> div.content
+	> div {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+}
+
+body > div.ui.page.modals.dimmer.transition.visible.active > div > div.content {
+	display: flex;
 }
 
 #root > div > div.App > section > div > div.ui.container.picture-section {
