--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -112,12 +112,8 @@
 	}
 }
 
-.share-btn {
-	// margin: 0 10px;
-}
-
 #show-liked-pics {
-	margin: 0 10px;
+	margin: 0 5px;
 }
 
 // Date Picker
@@ -179,6 +175,10 @@
 			}
 		}
 	}
+}
+
+.m5 {
+	margin: 0 5px;
 }
 
 body
