--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -85,7 +85,11 @@
 			margin: 20px auto;
 
 			#like-btn {
-				margin: 0;
+				margin: 0 5px;
+			}
+
+			#share-btn {
+				margin: 0 5px;
 			}
 		}
 
