--- a/src/styles.css
+++ b/src/styles.css
@@ -527,7 +527,10 @@ template {
   margin: 20px auto;
 }
 .ui.container .like-photo-btn #like-btn {
-  margin: 0;
+  margin: 0 5px;
+}
+.ui.container .like-photo-btn #share-btn {
+  margin: 0 5px;
 }
 .ui.container footer {
   display: flex;
