--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -240,3 +240,29 @@ body > div.ui.page.modals.dimmer.transition.visible.active > div > div.content {
 		}
 	}
 }
+
+.saved-cards-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+
+	.ui.header {
+		font-size: 3rem;
+		color: $logo-color;
+		font-family: $logo-font;
+		margin-bottom: 50px;
+	}
+
+	.cards {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
+
+		.ui.card {
+			margin: 20px;
+		}
+	}
+}
