--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -18,6 +18,7 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 5px 20px;
+	margin-top: 20px;
 	margin-bottom: 50px;
 
 	.header-logo {
