--- a/src/styles.css
+++ b/src/styles.css
@@ -484,6 +484,7 @@ template {
   justify-content: space-between;
   align-items: center;
   padding: 5px 20px;
+  margin-top: 20px;
   margin-bottom: 50px;
 }
 .header-content .header-logo {
