--- a/src/styles.css
+++ b/src/styles.css
@@ -712,5 +712,12 @@ body > div.ui.page.modals.dimmer.transition.visible.active > div > div.content {
     height: 100vh;
   }
 }
+#martian {
+  position: fixed;
+  bottom: 30%;
+  right: -50px;
+  transform: rotate(-40deg);
+  opacity: 90%;
+}
 
 /*# sourceMappingURL=styles.css.map */
