--- a/src/styles.css
+++ b/src/styles.css
@@ -680,6 +680,15 @@ body > div.ui.page.modals.dimmer.transition.visible.active > div > div.content {
   animation: martian 3s;
 }
 
+#root > div > div.App > main > div > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#root > div > div.App > main > div > div .running-martian {
+  height: 100px;
+}
+
 @keyframes martian {
   0% {
     right: -400px;
