--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -274,12 +274,24 @@ body > div.ui.page.modals.dimmer.transition.visible.active > div > div.content {
 	}
 }
 
+.martian-destroy {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	height: 75vh;
+}
+
 #martian {
 	position: fixed;
 	bottom: 35%;
 	right: -50px;
 	transform: rotate(-40deg);
 	animation: martian 3s;
+
+	&.hidden {
+		display: none;
+	}
 }
 
 #root > div > div.App > main > div > div {
