--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -96,7 +96,11 @@ body {
 	}
 
 	&.container {
-		//
+		.ui {
+			&.embed {
+				width: 100%;
+			}
+		}
 
 		.like-photo-btn {
 			display: flex;
@@ -269,6 +273,17 @@ body > div.ui.page.modals.dimmer.transition.visible.active > div > div.content {
 
 			.ui.card {
 				margin: 20px;
+
+				.extra.center.aligned.content {
+					.card-btns {
+						display: flex;
+						justify-content: space-around;
+
+						button {
+							margin: 0;
+						}
+					}
+				}
 			}
 		}
 	}
@@ -323,7 +338,7 @@ body > div:nth-child(6) > div > h3 {
 	}
 }
 
-@media (max-width: 750px) {
+@media (max-width: 770px) {
 	.header-content {
 		flex-direction: column;
 
@@ -351,6 +366,17 @@ body > div:nth-child(6) > div > h3 {
 		text-align: center;
 	}
 
+	.ui {
+		&.container {
+			width: 100%;
+			.ui {
+				&.embed {
+					width: 90%;
+				}
+			}
+		}
+	}
+
 	.footer-top {
 		.photo-copyright {
 			flex-direction: column;
@@ -360,6 +386,7 @@ body > div:nth-child(6) > div > h3 {
 			margin-bottom: 20px;
 		}
 	}
+
 	#modal {
 		width: 200px;
 	}
